Style create story modal buttons; fix vertical alignment of footer p element; fix page height and non-sticky footer issue that was happening on StoryPath.jsx; remove text decorations; give CreateStory.jsx the same themed background as rest of pages; add padding in some places where needed; replace 'wrong page' h2 with ErrorComponent; change some button styling for more contrast and add hover styling for some buttons and button-like elements.

--- a/client/src/components/UploadImage/UploadImage.css
+++ b/client/src/components/UploadImage/UploadImage.css
@@ -7,21 +7,41 @@
 
 .upload-image-container input[type="file"] {
     margin-bottom: 10px;
+    
 }
 
-.upload-image-container button {
-    padding: 10px 20px;
-    background-color: #007bff;
-    color: white;
+input[type="file"]::file-selector-button {
+    background-color: var(--button-accent);
+    color: #FFFBFB;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    font-size: 16px;
+    font-family: 'Comic Sans MS', cursive, sans-serif;
+    font-weight: bold;
+    text-align: center;
+    transition: background-color ease-in-out 0.5s;
+    padding: 6px 10px;
+    margin: 10px 10px 10px 0px;
+}
+
+.upload-image-container button {
+    background-color: var(--story-4);
+    color: #FFFBFB;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 16px;
+    text-align: center;
+    transition: background-color ease-in-out 0.5s;
+    padding: 5px 20px;
+    margin: 10px 0px 10px 0px;
 }
 
 .upload-image-container button:hover {
-    background-color: #0056b3;
+    background-color: var(--alt-button-accent);
 }
 
 .result-message {
-    padding-top: 20px;
+    padding-top: 10px;
 }
